update color and title

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1 id="welcome" style="color: #891818;">Welcome to My Website!!! version v1.0.6 check tags huu test</h1>
+    <h1 id="welcome" style="color: #891818;">Welcome to My Website!!! version v1.0.6 check tags huu test 2025-08-24 19:58:00</h1>
     <p>Thank you for visiting. Enjoy your stay!</p>
 
     <form action="/api/login" method="POST">
