build blue green deployment full workfolow

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1 id="welcome" style="color: #C666FA;">Deploy version v1.0.1 github deploy 2025-08-31 19:58:00 !!</h1>
+    <h1 id="welcome" style="color: #C666FA;">Deploy version v1.0.1 github deploy full workfolow 2025-08-31 19:58:00 !!</h1>
     <p>Thank you for visiting. Enjoy your stay!</p>
 
     <form action="/api/login" method="POST">
